# self-olm

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  CMakeLists.txt  Makefile  README.md  USAGE.md  build-deb.sh  build-rpm.sh
android/olm-sdk/: build.gradle
android/olm-sdk/src/androidTest/java/net/selfid/olm/: OlmAccountTest.java  OlmGroupSessionTest.java  OlmPkTest.java  OlmSasTest.java  OlmSessionTest.java  OlmUtilityTest.java  TestHelper.java
android/olm-sdk/src/main/: AndroidManifest.xml
android/olm-sdk/src/main/java/net/selfid/olm/: CommonSerializeUtils.java  OlmAccount.java  OlmException.java  OlmInboundGroupSession.java  OlmManager.java  OlmMessage.java  OlmOutboundGroupSession.java  OlmPkDecryption.java  OlmPkEncryption.java  OlmPkMessage.java  OlmPkSigning.java  OlmSAS.java  OlmSession.java  OlmUtility.java
android/olm-sdk/src/main/jni/: Android.mk  olm_account.h  olm_inbound_group_session.h  olm_jni_helper.cpp  olm_manager.h  olm_outbound_group_session.h  olm_pk.cpp  olm_pk.h  olm_sas.cpp  olm_sas.h  olm_session.h  olm_utility.h
include/olm/: account.hh  olm.h
include/self_olm/: account.hh  base64.h  base64.hh  cipher.h  crypto.h  error.h  inbound_group_session.h  megolm.h  message.h  message.hh  olm.h  olm.hh  olm_export.h  outbound_group_session.h  pickle.hh  pickle_encoding.h  pk.h  ratchet.hh  sas.h  session.hh  utility.hh
src/: account.cpp  base64.cpp  cipher.cpp  crypto.cpp  error.c  inbound_group_session.c  megolm.c  memory.cpp  message.cpp  olm.cpp  outbound_group_session.c  pickle.cpp  pickle_encoding.c  pk.cpp  ratchet.cpp  sas.c  session.cpp  utility.cpp
tests/: test_base64.cpp  test_crypto.cpp  test_group_session.cpp  test_list.cpp  test_megolm.cpp  test_message.cpp  test_olm.cpp  test_olm_decrypt.cpp  test_olm_sha256.cpp  test_olm_signature.cpp  test_olm_using_malloc.cpp  test_pk.cpp  test_ratchet.cpp  test_sas.cpp  test_session.cpp
tests/include/: utils.hh
